// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inbox Placement Reducer list seeds fail 1`] = `
Object {
  "seeds": Array [],
  "seedsError": undefined,
  "seedsPending": false,
}
`;

exports[`Inbox Placement Reducer list seeds pending 1`] = `
Object {
  "seeds": Array [],
  "seedsError": null,
  "seedsPending": true,
}
`;

exports[`Inbox Placement Reducer list seeds success 1`] = `
Object {
  "seeds": undefined,
  "seedsError": null,
  "seedsPending": false,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test pending 1`] = `
Object {
  "currentTest": null,
  "getTestError": null,
  "getTestPending": true,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test pending fail 1`] = `
Object {
  "currentTest": null,
  "getTestError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "getTestPending": false,
}
`;

exports[`Inbox Placement Reducer get specific inbox placement test success 1`] = `
Object {
  "currentTest": Object {
    "fakeData": true,
  },
  "getTestError": null,
  "getTestPending": false,
}
`;
